Update 4 반복문 예제.html

--- a/언어 - JavaScript/2 - 자바스크립트 기본/210321 - 반복문/4 반복문 예제.html
+++ b/언어 - JavaScript/2 - 자바스크립트 기본/210321 - 반복문/4 반복문 예제.html
@@ -13,7 +13,9 @@
 
     <body>
         <!--
-            해당 예제는 'for 반복문에서 초기화는 무조건 0으로 해야 되는 건가? 🧐'라는 궁금증이 생겨 서치해 보던 중.. https://developer.mozilla.org/ko/docs/Web/JavaScript/Guide/Loops_and_iteration <- 여기에 나온 for 반복문 부분 예제를 보고 select를 input checkbox로 바꿔서 해 보았당
+            해당 예제는 'for 반복문에서 초기화는 무조건 0으로 해야 되는 건가? 🧐'라는 궁금증이 생겨 서치해 보던 중..
+            https://developer.mozilla.org/ko/docs/Web/JavaScript/Guide/Loops_and_iteration
+            👆🏻 여기에 나온 for 반복문 부분 예제를 보고 select를 input checkbox로 바꿔서 해 보았당
             어렵지만 그래도 이것저것 서치해 보면서 성공한 데에 의미를 두자.. 🥲 하하
          -->
         <form>
