--- a/언어 - JavaScript/2 - 자바스크립트 기본/210322 - 함수/1 함수란?.html
+++ b/언어 - JavaScript/2 - 자바스크립트 기본/210322 - 함수/1 함수란?.html
@@ -3,8 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport"
-            content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
         <title>자바스크립트 기본 - 함수 (함수란?)</title>
     </head>
 
