--- a/언어 - JavaScript/2 - 자바스크립트 기본/210322 - 함수/1 함수란?.html
+++ b/언어 - JavaScript/2 - 자바스크립트 기본/210322 - 함수/1 함수란?.html
@@ -14,7 +14,7 @@
                     - 재사용성의 목표: 어떠한 동일한 코드가 있을 때 이 코드를 여러 곳에서 사용할 수 있는 형태로 만드는 것 (좋은 부품을 만드는 것)
                     - 재사용성이 높아지면 유지보수 용이해짐, 코드의 가독성이 좋아짐
 
-                funtion 함수명([인자...[,인자]]) {
+                function 함수명([인자...[,인자]]) {
                     코드
                     return 반환값
                 }
