Update 3 다양한 정의 방법.html

--- a/언어 - JavaScript/2 - 자바스크립트 기본/210322 - 함수/3 다양한 정의 방법.html
+++ b/언어 - JavaScript/2 - 자바스크립트 기본/210322 - 함수/3 다양한 정의 방법.html
@@ -9,7 +9,7 @@
 
     <body>
         <script>
-            // 1️⃣ 함수를 변수에 대입
+            // 1️⃣ 익명 함수 (함수를 변수에 대입 변수 호출로 함수 호출하지만 그냥 변수에 함수를 넣은 것뿐 이름을 붙인 건 아님!!)
             numbering = function() { // 함수에 대한 정의 부분이 numbering이라는 변수에 대입됨
                 i = 0;
                 while(i < 10) {
