--- a/언어 - JavaScript/3 - 함수 지향/210406 - 클로저/3-1 클로저의 응용 (보충 설명).html
+++ b/언어 - JavaScript/3 - 함수 지향/210406 - 클로저/3-1 클로저의 응용 (보충 설명).html
@@ -33,7 +33,7 @@
             }
 
             /*
-            따라서 제대로 나오게 할려면
+            따라서 제대로 나오게 하려면
             1️⃣ 함수에 인자로 i값을 넣어주고
             2️⃣ 인자 i값을 함수 내부에 존재하는 지역 변수처럼 사용할 수 있도록
             3️⃣ 내부 함수를 만들어 리턴값으로 참조하면 됩니다. (말로 설명하려니 어렵죠 ^^;)
